--- a/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/Web.config
+++ b/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/Web.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0"?>
-<!--Standard IIS 7.0 Web.config as created by Visual Studio.NET -->
+<!--Standard IIS 7.0 Web.config as created by Visual Studio.NET --> 
 <!-- All changes from the default configuaration is prefixed by '[ServiceStack Specific]:' -->
 <configuration>
 	<configSections>
@@ -16,7 +16,8 @@
 		</sectionGroup>
 	</configSections> 
 	<appSettings>
-		<add key="RedisHostAddress" value="localhost:6379"/>
+		<add key="RedisHostAddress" value="chi-test-mem1:6379"/>
+		<add key="RedisDb" value="2"/>
 		<add key="ComplexTypeEncoding" value="Jsv"/>
 		<add key="UrnSeperator" value=":"/>
 		<add key="DefaultTake" value="20"/>
