Added test to demonstrate Strict and Dynamic Type abilities of JSV

--- a/Common/ServiceStack.Text/ServiceStack.Text.Tests/ServiceStack.Text.Tests.csproj
+++ b/Common/ServiceStack.Text/ServiceStack.Text.Tests/ServiceStack.Text.Tests.csproj
@@ -84,7 +84,9 @@
     <Compile Include="DynamicModels\DataModel\CustomException.cs" />
     <Compile Include="DynamicModels\DataModel\DataContainer.cs" />
     <Compile Include="DynamicModels\DataModel\DataContainerBase.cs" />
+    <Compile Include="DynamicModels\DataModel\DynamicType.cs" />
     <Compile Include="DynamicModels\DataModel\ObjectGraph.cs" />
+    <Compile Include="DynamicModels\DataModel\StrictType.cs" />
     <Compile Include="InterfaceTests.cs" />
     <Compile Include="JsvFormatterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
