--- a/Common/ServiceStack.OrmLite/ServiceStack.OrmLite.Tests/ServiceStack.OrmLite.Tests.csproj
+++ b/Common/ServiceStack.OrmLite/ServiceStack.OrmLite.Tests/ServiceStack.OrmLite.Tests.csproj
@@ -111,6 +111,7 @@
     <Compile Include="OrmLiteInsertTests.cs" />
     <Compile Include="OrmLiteTestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlServerProviderTests.cs" />
     <Compile Include="Support\TestScripts.cs" />
     <Compile Include="UseCase\SimpleUseCase.cs" />
   </ItemGroup>
