Fixing reported issues with error handlers and bugs with .NET handling of response.Headers properties.

--- a/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/Web.config
+++ b/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/Web.config
@@ -16,7 +16,7 @@
 		</sectionGroup>
 	</configSections> 
 	<appSettings>
-		<add key="RedisHostAddress" value="chi-test-mem1:6379"/>
+		<add key="RedisHostAddress" value="localhost:6379"/>
 		<add key="RedisDb" value="2"/>
 		<add key="ComplexTypeEncoding" value="Jsv"/>
 		<add key="UrnSeperator" value=":"/>
