Added expiration and Jsv support to ICacheTextManager

--- a/Common/ServiceStack.Common/ServiceStack.CacheAccess.Providers/ServiceStack.CacheAccess.Providers.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.CacheAccess.Providers/ServiceStack.CacheAccess.Providers.csproj
@@ -75,6 +75,7 @@
     <Compile Include="CompressableFileAndCacheTextManagerFactory.cs" />
     <Compile Include="ContentCacheManager.cs" />
     <Compile Include="ContentSerializer.cs" />
+    <Compile Include="JsvCacheManager.cs" />
     <Compile Include="FileAndCacheTextManager.cs" />
     <Compile Include="FileSystemXmlCacheClient.cs" />
     <Compile Include="JsonCacheManager.cs" />
