--- a/trunk/Common/ServiceStack.Text/ServiceStack.Text.Tests/ServiceStack.Text.Tests.csproj
+++ b/trunk/Common/ServiceStack.Text/ServiceStack.Text.Tests/ServiceStack.Text.Tests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="DynamicModels\DataModel\DynamicType.cs" />
     <Compile Include="DynamicModels\DataModel\ObjectGraph.cs" />
     <Compile Include="DynamicModels\DataModel\StrictType.cs" />
+    <Compile Include="DynamicModels\DynamicMessageTests.cs" />
     <Compile Include="InterfaceTests.cs" />
     <Compile Include="JsvFormatterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
