--- a/trunk/Common/ServiceStack.Text/ServiceStack.Text/ServiceStack.Text.csproj
+++ b/trunk/Common/ServiceStack.Text/ServiceStack.Text/ServiceStack.Text.csproj
@@ -48,12 +48,22 @@
     <Compile Include="AssemblyUtils.cs" />
     <Compile Include="Controller\CommandProcessor.cs" />
     <Compile Include="Controller\PathInfo.cs" />
+    <Compile Include="JsonSerializer.cs" />
     <Compile Include="CsvStreamExtensions.cs" />
     <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="Env.cs" />
+    <Compile Include="ITextFormatter.cs" />
     <Compile Include="ITypeSerializer.Generic.cs" />
+    <Compile Include="Json\JsonTypeSerializer.cs" />
+    <Compile Include="Json\NewtonSoft\JavaScriptUtils.cs" />
+    <Compile Include="Json\JsonWriter.Generic.cs" />
+    <Compile Include="Json\NewtonSoft\MathUtils.cs" />
+    <Compile Include="Json\NewtonSoft\StringUtils.cs" />
+    <Compile Include="Json\NewtonSoft\ValidationUtils.cs" />
+    <Compile Include="JsText\JsWriter.cs" />
     <Compile Include="JsvFormatter.cs" />
     <Compile Include="Jsv\DateTimeSerializer.cs" />
+    <Compile Include="JsText\ITypeSerializer.cs" />
     <Compile Include="Jsv\JsvReader.Generic.cs" />
     <Compile Include="Jsv\JsvSerializer.Generic.cs" />
     <Compile Include="Jsv\JsvWriter.Generic.cs" />
@@ -63,7 +73,6 @@
     <Compile Include="Jsv\DeserializeDictionary.cs" />
     <Compile Include="Jsv\DeserializeListWithElements.cs" />
     <Compile Include="Jsv\ParseUtils.cs" />
-    <Compile Include="Jsv\SpecialTypeUtils.cs" />
     <Compile Include="Jsv\StaticParseMethod.cs" />
     <Compile Include="Jsv\DeserializeTypeUtils.cs" />
     <Compile Include="Jsv\DeserializeType.cs" />
@@ -71,7 +80,7 @@
     <Compile Include="ListExtensions.cs" />
     <Compile Include="MapExtensions.cs" />
     <Compile Include="Reflection\StaticAccessors.cs" />
-    <Compile Include="Jsv\WriterUtils.cs" />
+    <Compile Include="Jsv\JsvTypeSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Jsv\WriteDictionary.cs" />
     <Compile Include="Jsv\WriteLists.cs" />
