re-factored JSV serializer and started work on a shared branch to provide a JSON serializer.

--- a/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Tests/RedisWebServices.Tests.csproj
+++ b/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Tests/RedisWebServices.Tests.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdhocTests.cs" />
     <Compile Include="SortedSetOperationsTests.cs" />
     <Compile Include="SetOperationsTests.cs" />
     <Compile Include="HashOperationsTests.cs" />
