--- a/trunk/Common/Northwind.Benchmarks/Northwind.Benchmarks/Northwind.Benchmarks.csproj
+++ b/trunk/Common/Northwind.Benchmarks/Northwind.Benchmarks/Northwind.Benchmarks.csproj
@@ -43,6 +43,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\Jayrock.Json.dll</HintPath>
     </Reference>
+    <Reference Include="LitJson, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\LitJson.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json.Net20, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\Newtonsoft.Json.Net20.dll</HintPath>
