--- a/trunk/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Web\CompressedFileResult.cs" />
     <Compile Include="Web\CompressedResult.cs" />
     <Compile Include="Web\CompressionTypes.cs" />
+    <Compile Include="Web\HttpMethods.cs" />
     <Compile Include="Web\TextResult.cs" />
     <Compile Include="Web\EndPoint.cs" />
     <Compile Include="Web\FileResult.cs" />
