--- a/trunk/Common/ServiceStack.Text/ServiceStack.Text.Tests/ServiceStack.Text.Tests.csproj
+++ b/trunk/Common/ServiceStack.Text/ServiceStack.Text.Tests/ServiceStack.Text.Tests.csproj
@@ -93,12 +93,14 @@
     <Compile Include="JsonTests\ModelWithAllTypesTests.cs" />
     <Compile Include="JsvFormatterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryStringWriterTests.cs" />
     <Compile Include="ReflectionExtensionTests.cs" />
     <Compile Include="ReportedIssues.cs" />
     <Compile Include="DataTests.cs" />
     <Compile Include="StringSerializerNorthwindDatabaseTests.cs" />
     <Compile Include="StringSerializerTests.cs" />
     <Compile Include="StringSerializerTranslationTests.cs" />
+    <Compile Include="TextSerializerTestBase.cs" />
     <Compile Include="TypeRegistrationTests.cs" />
   </ItemGroup>
   <ItemGroup>
