--- a/trunk/Common/ServiceStack.Text/ServiceStack.Text/ServiceStack.Text.csproj
+++ b/trunk/Common/ServiceStack.Text/ServiceStack.Text/ServiceStack.Text.csproj
@@ -55,15 +55,13 @@
     <Compile Include="ITextFormatter.cs" />
     <Compile Include="ITypeSerializer.Generic.cs" />
     <Compile Include="Json\JsonTypeSerializer.cs" />
-    <Compile Include="Json\NewtonSoft\JavaScriptUtils.cs" />
+    <Compile Include="Json\JsonUtils.cs" />
     <Compile Include="Json\JsonWriter.Generic.cs" />
-    <Compile Include="Json\NewtonSoft\MathUtils.cs" />
-    <Compile Include="Json\NewtonSoft\StringUtils.cs" />
-    <Compile Include="Json\NewtonSoft\ValidationUtils.cs" />
-    <Compile Include="JsText\JsWriter.cs" />
+    <Compile Include="Common\JsWriter.cs" />
+    <Compile Include="QueryStringSerializer.cs" />
     <Compile Include="JsvFormatter.cs" />
     <Compile Include="Jsv\DateTimeSerializer.cs" />
-    <Compile Include="JsText\ITypeSerializer.cs" />
+    <Compile Include="Common\ITypeSerializer.cs" />
     <Compile Include="Jsv\JsvReader.Generic.cs" />
     <Compile Include="Jsv\JsvSerializer.Generic.cs" />
     <Compile Include="Jsv\JsvWriter.Generic.cs" />
@@ -82,15 +80,15 @@
     <Compile Include="Reflection\StaticAccessors.cs" />
     <Compile Include="Jsv\JsvTypeSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Jsv\WriteDictionary.cs" />
-    <Compile Include="Jsv\WriteLists.cs" />
+    <Compile Include="Common\WriteDictionary.cs" />
+    <Compile Include="Common\WriteLists.cs" />
     <Compile Include="StreamExtensions.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="Support\AssemblyTypeDefinition.cs" />
     <Compile Include="Support\TypePair.cs" />
     <Compile Include="TranslateListWithElements.cs" />
     <Compile Include="TypeSerializer.cs" />
-    <Compile Include="Jsv\WriteType.cs" />
+    <Compile Include="Common\WriteType.cs" />
     <Compile Include="ReflectionExtensions.cs" />
     <Compile Include="TextExtensions.cs" />
     <Compile Include="TypeSerializer.Generic.cs" />
