--- a/trunk/ServiceStack.Examples/ServiceStack.Examples.ServiceModel/ServiceStack.Examples.ServiceModel.csproj
+++ b/trunk/ServiceStack.Examples/ServiceStack.Examples.ServiceModel/ServiceStack.Examples.ServiceModel.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{21777EAF-74FD-4D0B-947A-C602D8D3EBBA}</ProjectGuid>
+    <ProjectGuid>{2B840832-3036-47D9-8F9B-560CD5C2BF90}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ServiceStack.Examples.Tests.Integration</RootNamespace>
-    <AssemblyName>ServiceStack.Examples.Tests.Integration</AssemblyName>
+    <RootNamespace>ServiceStack.Examples.ServiceModel</RootNamespace>
+    <AssemblyName>ServiceStack.Examples.ServiceModel</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="ServiceStack, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\ServiceStack.dll</HintPath>
@@ -51,6 +47,9 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -61,25 +60,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IntegrationTestBase.cs" />
-    <Compile Include="IntegrationTests.cs" />
-    <Compile Include="MovieRestTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types\ArrayOfUser.cs" />
+    <Compile Include="Operations\DeleteAllUsers.cs" />
+    <Compile Include="Operations\GetAllUsers.cs" />
+    <Compile Include="Operations\GetFactorial.cs" />
+    <Compile Include="Operations\GetFibonacciNumbers.cs" />
+    <Compile Include="Operations\GetNorthwindCustomerOrders.cs" />
+    <Compile Include="Operations\GetNorthwindCustomerOrdersCached.cs" />
+    <Compile Include="Operations\GetUsers.cs" />
+    <Compile Include="Operations\Greet.cs" />
+    <Compile Include="Types\Movie.cs" />
+    <Compile Include="Operations\Movies.cs" />
+    <Compile Include="Types\NorthwindDtos.cs" />
+    <Compile Include="Operations\PopulateMovies.cs" />
+    <Compile Include="Operations\StoreNewUser.cs" />
+    <Compile Include="Types\User.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ServiceStack.Examples.Host.Console\ServiceStack.Examples.Host.Console.csproj">
-      <Project>{77363223-98F2-4724-8044-569C6485B3A9}</Project>
-      <Name>ServiceStack.Examples.Host.Console</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ServiceStack.Examples.ServiceInterface\ServiceStack.Examples.ServiceInterface.csproj">
       <Project>{519A7B72-D144-436D-AAC3-7BAAEAD3FF52}</Project>
       <Name>ServiceStack.Examples.ServiceInterface</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="sqlite3.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
