tweaks and added an AjaxClient to demonstate the REST support

--- a/ServiceStack.Examples/ServiceStack.Examples.ServiceModel/ServiceStack.Examples.ServiceModel.csproj
+++ b/ServiceStack.Examples/ServiceStack.Examples.ServiceModel/ServiceStack.Examples.ServiceModel.csproj
@@ -74,7 +74,7 @@
     <Compile Include="Types\Movie.cs" />
     <Compile Include="Operations\Movies.cs" />
     <Compile Include="Types\NorthwindDtos.cs" />
-    <Compile Include="Operations\PopulateMovies.cs" />
+    <Compile Include="Operations\ResetMovieDatabase.cs" />
     <Compile Include="Operations\StoreNewUser.cs" />
     <Compile Include="Types\User.cs" />
   </ItemGroup>
