Updated ServiceStack to v1.43 which uses the new JsonSerializer with updated tests and examples to match

--- a/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints.Tests/ServiceStack.WebHost.Endpoints.Tests.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints.Tests/ServiceStack.WebHost.Endpoints.Tests.csproj
@@ -91,6 +91,8 @@
     <Compile Include="IntegrationTests\Movie.cs" />
     <Compile Include="IntegrationTests\MovieRestService.cs" />
     <Compile Include="IntegrationTests\MovieRestTests.cs" />
+    <Compile Include="IntegrationTests\ResetMovieDatabase.cs" />
+    <Compile Include="IntegrationTests\ResetMovieDatabaseService.cs" />
     <Compile Include="KeyValueDataContractDeserializerTests.cs" />
     <Compile Include="Mocks\HttpResponseMock.cs" />
     <Compile Include="ServiceHostTestBase.cs" />
