--- a/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.ServiceInterface/RedisWebServices.ServiceInterface.csproj
+++ b/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.ServiceInterface/RedisWebServices.ServiceInterface.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin\GetServerInfoService.cs" />
     <Compile Include="Admin\EchoService.cs" />
     <Compile Include="Admin\FlushDbService.cs" />
     <Compile Include="Admin\SlaveOfService.cs" />
